--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,4 @@
-<IfModule mod_reqrite.c>
+<IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteCond %{REQUEST_URI}::$1 ^(/.+)/(.*)::\2$
     RewriteRule ^(.*) - [E=BASE:%1]
